--- a/primo-explore/custom/01NWU_INST-HSLV_TEST/html/homepage/homepage_en.html
+++ b/primo-explore/custom/01NWU_INST-HSLV_TEST/html/homepage/homepage_en.html
@@ -8,20 +8,14 @@
             </md-card-title>
             <md-card-content>
               <p>This is Galter Library's discovery tool for searching physical and electronic resources available to Northwestern users, including:</p>
-              <ul>
-                <li>Books (electronic and print)</li>
-                <li>Journals</li>
+              <ul id="searching-list">
+                <li>Books & Journals (electronic and print)</li>
                 <li>Articles</li>
-                <li>Videos</li>
-                <li>Digital images</li>
+                <li>Videos & Digital images</li>
                 <li>Special Collections materials</li>
               </ul>
             </md-card-content>
-        </md-card>
-    </div>
-    <div flex-xs="100" flex="50" layout="column">
-        <md-card class="default-card">
-            <md-card-title>
+            <md-card-title id="get-help-title">
                 <md-card-title-text>
                     <span class="md-headline">Where can I get help?</span>
                 </md-card-title-text>
@@ -37,10 +31,6 @@
                         <span><a href="tel:+13125038126">Call us at 312-503-8126</a></span>
                     </md-list-item>
                     <md-list-item>
-                        <prm-icon class="" icon-type="svg" svg-icon-set="communication" icon-definition="ic_chat_24px" style="margin-right:1em;"></prm-icon>
-                        <span><a href="https://galter.northwestern.edu/about/contact-us">Chat with us</a></span>
-                    </md-list-item>
-                    <md-list-item>
                         <prm-icon class="" icon-type="svg" svg-icon-set="communication" icon-definition="ic_live_help_24px" style="margin-right:1em;"></prm-icon>
                         <span><a href="https://galter.northwestern.edu/galterguides?url=https%3A%2F%2Flibguides.galter.northwestern.edu%2Ffind-resources">How to find resources</a></span>
                     </md-list-item>
@@ -48,9 +38,7 @@
             </md-card-content>
         </md-card>
     </div>
-</md-content>
-<md-content layout-xs="column" layout="row">
-    <div flex="40" flex-xs="100" layout="column">
+    <div flex-xs="100" flex="50" layout="column">
         <md-card class="default-card">
             <md-card-title>
                 <md-card-title-text>
@@ -58,7 +46,7 @@
                 </md-card-title-text>
             </md-card-title>
             <md-card-content>
-                <ul>
+                <ul id="sign-in-list">
                   <li>Request Materials</li>
                   <li>Renew books and videos</li>
                   <li>Create lists of favorites</li>
